# nft-data

./: .env  Dockerfile  LICENSE  README.md  app.json  app.py  docker-compose.yml  docker-composesdfasdfsdf.yml  main.py  pyproject.toml  requirements.txt
